[gd_scene load_steps=2 format=3 uid="uid://cd4bju83wwrjq"]

[ext_resource type="Script" uid="uid://lmfityg7wa2w" path="res://Scripts/server_list_item.gd" id="1_mr4mn"]

[node name="ServerListItem" type="HBoxContainer"]
offset_right = 853.0
offset_bottom = 52.0
script = ExtResource("1_mr4mn")

[node name="ServerNamePanel" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(864, 0)
layout_mode = 2

[node name="ServerName" type="Label" parent="ServerNamePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -237.0
grow_horizontal = 2
grow_vertical = 2
text = "Server"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="PlayersOnline" type="Label" parent="ServerNamePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "0 Players online"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Edit" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Edit"

[node name="Join" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Join"

[node name="EditPopup" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Control" type="Control" parent="EditPopup"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="EditPopup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="EditPopup/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 404
theme_override_constants/margin_top = 198
theme_override_constants/margin_right = 404
theme_override_constants/margin_bottom = 227

[node name="PanelContainer" type="PanelContainer" parent="EditPopup/Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Server name:"

[node name="EditServerName" type="LineEdit" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/EditCancelButton")
text = "Server"

[node name="VBoxContainer2" type="VBoxContainer" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Server Ip:"

[node name="EditServerIp" type="LineEdit" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="EditUpdateButton" type="Button" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../EditCancelButton")
focus_neighbor_top = NodePath("../../VBoxContainer2/EditServerIp")
focus_neighbor_right = NodePath("../EditDeleteButton")
focus_neighbor_bottom = NodePath("../../VBoxContainer/EditServerName")
theme_override_font_sizes/font_size = 30
text = "Update"

[node name="EditDeleteButton" type="Button" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../EditUpdateButton")
focus_neighbor_top = NodePath("../../VBoxContainer2/EditServerIp")
focus_neighbor_right = NodePath("../EditCancelButton")
focus_neighbor_bottom = NodePath("../../VBoxContainer/EditServerName")
theme_override_font_sizes/font_size = 30
text = "Delete"

[node name="EditCancelButton" type="Button" parent="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../EditDeleteButton")
focus_neighbor_top = NodePath("../../VBoxContainer2/EditServerIp")
focus_neighbor_right = NodePath("../EditUpdateButton")
focus_neighbor_bottom = NodePath("../../VBoxContainer/EditServerName")
theme_override_font_sizes/font_size = 30
text = "Cancel"

[connection signal="pressed" from="Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/EditServerName" to="." method="_on_edit_server_name_or_ip_text_changed"]
[connection signal="text_changed" from="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/EditServerIp" to="." method="_on_edit_server_name_or_ip_text_changed"]
[connection signal="pressed" from="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/EditUpdateButton" to="." method="_on_edit_update_button_pressed"]
[connection signal="pressed" from="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/EditDeleteButton" to="." method="_on_edit_delete_button_pressed"]
[connection signal="pressed" from="EditPopup/Control/PanelContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/EditCancelButton" to="." method="_on_edit_cancel_button_pressed"]
